--- a/index.html
+++ b/index.html
@@ -28,6 +28,21 @@
   <button id="btn">compute</button>
 
   <p id="result"></p>
+  <p>
+    Insert the information in the form and the calculator will determine the cost variance<br> 
+    What is the cost variance?<br>
+    The cost variance is the difference between the amount of cash that you plan to spend on a project and the actual amount that you end up spending in order to complete the project. Simply it is the difference between the budgeted cost of work performed and the actual cost of work performed.<br>
+    How to calculate cost variance?<br>
+    To calculate cost variance you should use the following formula:<br>
+    cost variance = budgeted cost - actual cost<br>
+    Example: Company x had a budgeted cost of $9,000 to repair some of it's machine but the actual repairs cost was $10,500, calculate the cost variance?<br>
+    Using the cost variance formula the answer will be:<br>
+    cost variance = budgeted cost - actual cost<br>
+    cost variance = $9,000 - $10,500<br>
+    cost variance = -$1,500<br>
+    Why use cost variance?<br>
+    The cost variance is usually used to track the progression of the project. It works as an indicator of how well the company monitor potential risks and how well it analyzes the data related to the project.<br>
+</p>
   <script src="app.js"></script>
 </body>
 </html>
